[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://scripts/DroppedItem.gd" id="1"]

[sub_resource type="SphereMesh" id="1"]
radius = 0.2

[sub_resource type="SphereShape3D" id="2"]
radius = 0.2

[sub_resource type="SphereShape3D" id="5"]
radius = 1.5

[sub_resource type="PhysicsMaterial" id="3"]
bounce = 0.3
friction = 0.5

[sub_resource type="StandardMaterial3D" id="4"]
albedo_color = Color(0.8, 0.8, 0.8, 1)
metallic = 0.2
roughness = 0.7
transparency = 1

[node name="DroppedItem" type="RigidBody3D"]
script = ExtResource(1)
mass = 0.1
physics_material_override = SubResource(3)
collision_layer = 4
collision_mask = 19
angular_damp = 0.8
linear_damp = 0.1
freeze = false

[node name="MeshInstance" type="MeshInstance3D" parent="."]
mesh = SubResource(1)
surface_material_override/0 = SubResource(4)

[node name="CollisionShape" type="CollisionShape3D" parent="."]
shape = SubResource(2)

[node name="PickupArea" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 2
monitoring = true
monitorable = false

[node name="PickupShape" type="CollisionShape3D" parent="PickupArea"]
shape = SubResource(5)
